# openethereum-3.x

./: Cargo.toml
.github/workflows/: fmt.yml
crates/ethcore/: Cargo.toml
crates/ethcore/res/chainspec/: honey_badger_bft.json
crates/ethcore/res/contracts/: block_reward_hbbft.json  key_history_contract.json  staking_contract.json  validator_set_hbbft.json
crates/ethcore/src/: externalities.rs  lib.rs  test_helpers.rs
crates/ethcore/src/client/: client.rs  test_client.rs  traits.rs
crates/ethcore/src/engines/: mod.rs  signer.rs
crates/ethcore/src/engines/hbbft/hbbft_config_generator/: .gitignore  Cargo.toml
crates/ethcore/src/engines/hbbft/hbbft_config_generator/src/: keygen_history_helpers.rs  main.rs
crates/ethcore/src/miner/: miner.rs  mod.rs
crates/ethcore/src/spec/: spec.rs
crates/ethcore/src/tests/: client.rs
crates/ethcore/sync/src/: api.rs  block_sync.rs
crates/ethjson/src/spec/: engine.rs  hbbft.rs  mod.rs
crates/net/network-devp2p/src/: discovery.rs  host.rs  node_table.rs
crates/util/version/: Cargo.toml
ethcore/: Cargo.toml
ethcore/res/: honey_badger_bft.json
ethcore/res/contracts/: key_history_contract.json  staking_contract.json  validator_set_hbbft.json
ethcore/src/: lib.rs  tx_filter.rs
ethcore/src/client/: chain_notify.rs  client.rs  mod.rs  test_client.rs  traits.rs
ethcore/src/engines/: mod.rs  signer.rs
ethcore/src/miner/: miner.rs  mod.rs
ethcore/src/spec/: spec.rs
ethcore/src/tests/: client.rs
ethcore/sync/src/: api.rs
json/src/spec/: engine.rs  mod.rs
parity/: run.rs
(+59 files in other folders)
